--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 body{
 
-    background-image: url("Whatsapp\ Wallpapers\ \ \ Top\ Whatsapp\ Backgrounds\ \ \ WallpaperAccess.jpg")
+    background-image: url("img/Whatsapp\ Wallpapers\ \ \ Top\ Whatsapp\ Backgrounds\ \ \ WallpaperAccess.jpg")
 
 }
 nav , footer {
